style(calub-web): avoid page break on skills

--- a/apps/calub/web/src/components/sections/skills/skills-category-item.module.scss
+++ b/apps/calub/web/src/components/sections/skills/skills-category-item.module.scss
@@ -1,4 +1,6 @@
 .container {
+  @apply print:avoid-page-break-inside;
+
   .title {
     @apply uppercase font-medium;
   }
